--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^13.8.1",
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "mongoose": "^6.4.1",
+    "node-schedule": "^2.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.18"
